# openGL_learning

./: README.md
basic_opengl_setup/: CMakeLists.txt
basic_opengl_setup/include/glad/: glad.h
basic_opengl_setup/src/: glad.c  main.cpp
learning_to_setup_opengl/: .ccls  .clang-format  CMakeLists.txt  README.md  run
learning_to_setup_opengl/include/: Application.h  Circle.h  Shader.h
learning_to_setup_opengl/src/: Application.cpp  Circle.cpp  Shader.cpp  glad.c  main.cpp
